// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Links Inner component with a large number of needs matches snapshot and has expected path 1`] = `
<div
  class="gl-display-flex gl-relative"
  totalgroups="10"
>
  <svg
    class="gl-absolute gl-pointer-events-none"
    height="445px"
    id="reference-0"
    viewBox="0,0,1019,445"
    width="1019px"
  >
    <path
      class="gl-fill-transparent gl-stroke-gray-200 gl-transition-duration-slow gl-transition-timing-function-ease"
      d="M202,118C52,118,52,138,102,138"
      stroke-width="2"
    />
    <path
      class="gl-fill-transparent gl-stroke-gray-200 gl-transition-duration-slow gl-transition-timing-function-ease"
      d="M202,118C62,118,62,148,112,148"
      stroke-width="2"
    />
    <path
      class="gl-fill-transparent gl-stroke-gray-200 gl-transition-duration-slow gl-transition-timing-function-ease"
      d="M222,138C72,138,72,158,122,158"
      stroke-width="2"
    />
    <path
      class="gl-fill-transparent gl-stroke-gray-200 gl-transition-duration-slow gl-transition-timing-function-ease"
      d="M212,128C82,128,82,168,132,168"
      stroke-width="2"
    />
    <path
      class="gl-fill-transparent gl-stroke-gray-200 gl-transition-duration-slow gl-transition-timing-function-ease"
      d="M232,148C92,148,92,178,142,178"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Links Inner component with a parallel need matches snapshot and has expected path 1`] = `
<div
  class="gl-display-flex gl-relative"
  totalgroups="10"
>
  <svg
    class="gl-absolute gl-pointer-events-none"
    height="445px"
    id="reference-0"
    viewBox="0,0,1019,445"
    width="1019px"
  >
    <path
      class="gl-fill-transparent gl-stroke-gray-200 gl-transition-duration-slow gl-transition-timing-function-ease"
      d="M192,108C32,108,32,118,82,118"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Links Inner component with one need matches snapshot and has expected path 1`] = `
<div
  class="gl-display-flex gl-relative"
  totalgroups="10"
>
  <svg
    class="gl-absolute gl-pointer-events-none"
    height="445px"
    id="reference-0"
    viewBox="0,0,1019,445"
    width="1019px"
  >
    <path
      class="gl-fill-transparent gl-stroke-gray-200 gl-transition-duration-slow gl-transition-timing-function-ease"
      d="M202,118C52,118,52,138,102,138"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Links Inner component with same stage needs matches snapshot and has expected path 1`] = `
<div
  class="gl-display-flex gl-relative"
  totalgroups="10"
>
  <svg
    class="gl-absolute gl-pointer-events-none"
    height="445px"
    id="reference-0"
    viewBox="0,0,1019,445"
    width="1019px"
  >
    <path
      class="gl-fill-transparent gl-stroke-gray-200 gl-transition-duration-slow gl-transition-timing-function-ease"
      d="M192,108C32,108,32,118,82,118"
      stroke-width="2"
    />
    <path
      class="gl-fill-transparent gl-stroke-gray-200 gl-transition-duration-slow gl-transition-timing-function-ease"
      d="M202,118C42,118,42,128,92,128"
      stroke-width="2"
    />
  </svg>
</div>
`;
